main_sources = [
	'ar0134.c',
	'ar0134.h',
	'blobwatch.c',
	'blobwatch.h',
	'esp570.c',
	'esp570.h',
	'esp770u.c',
	'esp770u.h',
	'flicker.c',
	'flicker.h',
	'main.c',
	'mt9v034.c',
	'mt9v034.h',
	'uvc.c',
	'uvc.h'
]
main_deps = [
	sdl_dep,
	thread_dep,
	usb_dep
]
executable('main', main_sources, dependencies : main_deps)
